@startuml

!includesub ../../vulkan.puml!VULKAN

!startsub LAYERHANDLER

namespace engine {

    namespace vulkan {

        class LayerHandler

        VulkanRenderObject <|-- LayerHandler

        class "LayerHandler::LayerExtension" {
            + properties : ExtensionProperties
            + enabled : bool
        }

        class "LayerHandler::Layer" {
            + properties : LayerProperties
            + enabled : bool
            + pExtensions : LayerExtension[]
            + extensionCount : uint32
        }

        class "LayerHandler::LayerNames" {
            + names : StringLiteral[]
            + count : uint32
        }

        class "LayerHandler::ExtensionNames" {
            + names : StringLiteral[]
            + count : uint32
        }

        class "LayerHandler::ValidationEnabledFeatures" {
            + pFeatures : ValidationFeatureEnable []
            + count : uint32
        }

        class "LayerHandler::ValidationDisabledFeatures" {
            + pFeatures : ValidationFeatureDisable []
            + count : uint32
        }

        class LayerHandler {
            .. constants ..
            + {static} validationLayerName : StringLiteral
            + {static} validationRequiredExtensionName : StringLiteral
            .. fields ..
            - _layers : Array < Layer >
            - _enabledLayerNames : StringLiteral[]
            - _enabledLayerCount : uint32
            - _enabledExtensionNames : StringLiteral[]
            - _enabledExtensionCount : uint32
            - _debugLayerEnabled : bool
            .. getters ..
            + Array < Layer > layers () const
            + bool debugLayerEnabled () const
            .. functions ..
            + LayerHandler refreshLayers ()
            + LayerNames enabledLayerNames ()
            + ExtensionNames enabledExtensionNames ()
        }

        "LayerHandler::Layer" "1" *-- "1.." "LayerHandler::LayerExtension" : has
        LayerHandler "1" *-- "1.." "LayerHandler::Layer" : has
        LayerHandler "1" *-- "1.." "LayerHandler::LayerNames" : produces
        LayerHandler "1" *-- "1.." "LayerHandler::ExtensionNames" : produces
        LayerHandler --- "LayerHandler::ValidationEnabledFeatures" : is nested in
        LayerHandler --- "LayerHandler::ValidationDisabledFeatures" : is nested in

        class ValidationCache {
            - _device : DeviceHandle
            - _deviceName : cds :: String
            - _cachePath : cds :: Path
            - _handle : ValidationCacheHandle
            + ValidationCacheHandle handle () const
            + ValidationCache ()
            + ValidationCache ( ValidationCache const & )
            + ValidationCache ( ValidationCache && )
            + ValidationCache operator = ( ValidationCache const & )
            + ValidationCache operator = ( ValidationCache && )
            + ValidationCache init ( Device, cds :: Path )
        }

    }

}

!endsub

@enduml